<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="U_Convert_INT32" Id="{3bd9cb37-c4b6-417e-a2bf-f1225ac13680}">
    <Declaration><![CDATA[TYPE U_Convert_INT32 :
UNION
	nValue		:DINT;
	arrByte		:ARRAY[1..4] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>